# landing_hw

src/detector/: CMakeLists.txt
src/detector/launch/: aruco_detector.launch
src/detector/scripts/: aruco_detector.py  aruco_detector_v2.py  real_cam2ros.py
src/include/: landing.h
src/interactive_controller/src/: interactive_controller.cpp
src/offboard/: CMakeLists.txt  package.xml
src/offboard/launch/: offboard.launch
src/offboard/src/: offboard_node.cpp  offboard_pid_node.cpp  real_offboard_pid_node.cpp
src/transform/: CMakeLists.txt  package.xml
src/transform/src/: adative_transform_node.cpp  transform_node.cpp  transform_node_old.cpp
